--- a/style.css
+++ b/style.css
@@ -66,9 +66,12 @@ nav {
 
 	list-style-type: none;
 	text-decoration: none;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
+	background-color: #ccc;
+	border-radius: 5px;
 	margin: 3px;
 	padding: 5px 10px 5px 10px;
+	
 }
 
 .left-nav ul li a {
