--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 main {
 	display: flex;
-	border: 2px solid orange;
+	/*border: 2px solid orange;*/
 	margin: 5px;
 }
 
@@ -137,9 +137,9 @@ nav a {
 /*********************RIGHT-BOX**********************/
 
 .right-box {
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	flex-basis: 90%;
-	padding: 5px;
+	padding: 0 5px 10px 10px;
 }	
 
 .right-box ul li {
