--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ main {
 	margin: 5px;
 }
 
-ul {
+ul, ol {
 
 	list-style-position: inside;
 	
@@ -40,6 +40,11 @@ ul {
 
 h1 {
 	color: #3939ac;
+}
+
+.H1 {
+
+	margin: 30px 0;
 }
 
 h2, h3 {
