--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Color palette:
  1) Blue #3939ac
+ 	Light blue #d8d8f3
  2) Light Blue #8c8cd9
  3) Smoky white #f5f5f5
  4)	Light gray #e6e6e6
@@ -33,6 +34,12 @@ ul, ol {
 
 	list-style-position: inside;
 	
+}
+
+code {
+	background-color: #d8d8f3;
+	padding: 5px;
+
 }
 
 	
