--- a/styles/style.css
+++ b/styles/style.css
@@ -54,8 +54,14 @@ h1 {
 	margin: 30px 0;
 }
 
-h2, h3 {
+h2 {
 	color: #8c8cd9;
+	margin: 15px 0;
+}
+
+h3 {
+	color: #3939ac;
+	margin: 15px 0;
 }
 
 header {
@@ -170,6 +176,16 @@ nav a {
 	color: black;
 	display: inline-block;
 	width: 8px;
+}
+
+#the-box-model {
+	display: inline-block;
+	background-image: url('../images/the-box-model.png');
+	background-repeat: no-repeat;
+	height: 170px;
+	width: 340px;
+	background-size: cover;
+	background-position: center center;
 }
 
 
