--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,11 @@ main {
 	margin: 5px;
 }
 
+section {
+	padding-bottom: 15px;
+	border-bottom: 1px solid #ccc;
+}
+
 ul, ol {
 
 	list-style-position: inside;
