--- a/styles/style.css
+++ b/styles/style.css
@@ -12,185 +12,199 @@
 /**************************************************/
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-	background-color: #f5f5f5;
-	color: #4d4d4d;
-	font-family: Yu Gothic; 
-	/*font-weight: 900;*/
+  background-color: #f5f5f5;
+  color: #4d4d4d;
+  font-family: Yu Gothic;
+  /*font-weight: 900;*/
 }
 
 main {
-	display: flex;
-	/*border: 2px solid orange;*/
-	margin: 5px;
+  display: flex;
+  /*border: 2px solid orange;*/
+  margin: 5px;
 }
 
 section {
-	padding-bottom: 15px;
-	border-bottom: 1px solid #ccc;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #ccc;
 }
 
-ul, ol {
+.highlight {
+  /* background-color: yellowgreen; */
+  color: crimson;
+}
 
-	list-style-position: inside;
-	
+ul,
+ol {
+  list-style-position: inside;
 }
 
 code {
-	background-color: #d8d8f3;
-	padding: 5px;
-
+  background-color: #d8d8f3;
+  padding: 5px;
 }
 
-	
-	
-
 h1 {
-	color: #3939ac;
+  color: #3939ac;
 }
 
 .H1 {
-
-	margin: 30px 0;
+  margin: 30px 0;
 }
 
 h2 {
-	color: #8c8cd9;
-	margin: 15px 0;
+  color: #8c8cd9;
+  margin: 15px 0;
 }
 
 h3 {
-	color: #3939ac;
-	margin: 15px 0;
+  color: #3939ac;
+  margin: 15px 0;
+}
+
+h4 {
+  color: #3939ac;
+  margin: 5px 0;
 }
 
 header {
-	background-color: #cccccc;
-	border-top: 1px solid #3939ac;
+  background-color: #cccccc;
+  border-top: 1px solid #3939ac;
 }
 
 nav {
-	background-color: #e6e6e6;
+  background-color: #e6e6e6;
 }
 
 aside {
-	/*display: flex;*/
-	/*border: 1px solid blue;*/
-	
-	
-	/*flex-direction: column;*/
-	/*flex-basis: 50%;*/
-	position: sticky;
-	top: 0;
+  /*display: flex;*/
+  /*border: 1px solid blue;*/
 
-
+  /*flex-direction: column;*/
+  /*flex-basis: 50%;*/
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  overflow: auto;
 }
 
-
 footer {
-	background-color: #cccccc;
-	color: #3939ac;
-	border-bottom: 10px solid #3939ac;
-}	
-
+  background-color: #cccccc;
+  color: #3939ac;
+  border-bottom: 10px solid #3939ac;
+}
 
 /**************************************************/
 /************************HEADER********************/
 .icon {
-	color: black;
-	margin-left: 5px;
-	margin-right: 5px;
-
+  color: black;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 /**********************NAV*************************/
 nav a {
-	margin-left: 5px;
+  margin-left: 5px;
 }
 
 /************************LEFT-BOX*******************/
 
-
 .left-box {
-	display: flex;
-	flex-direction: column;
-	/*border: 1px solid black;*/
-	flex-basis: 10%;
-	/*align-items: center;*/
-	/*justify-content: center;*/
-	/*text-align: center;*/
-	/*padding: 5px;*/
-	top: 0;
+  display: flex;
+  flex-direction: column;
+  /*border: 1px solid black;*/
+  flex-basis: 10%;
+  /*align-items: center;*/
+  /*justify-content: center;*/
+  /*text-align: center;*/
+  /*padding: 5px;*/
+  top: 0;
 }
 
 .left-box ul {
-	list-style-type: none;
-	/*border: 1px solid red;*/
+  list-style-type: none;
+  /*border: 1px solid red;*/
 }
 
 .left-box ul li {
-
-	margin: 7px 0;
-	/*border: 1px solid black;*/
-	/*width: 70%;*/
-	
-
+  margin: 7px 0;
+  /*border: 1px solid black;*/
+  /*width: 70%;*/
 }
 
 .left-box ul li a {
-	text-decoration: none;
-	/*border: 1px solid black;*/
-	background-color: #ccc;
-	color: #4d4d4d;
-	border-radius: 3px;
-	padding: 0 10px 0 5px;
-	font-size: 12px;
-	display: block;
-
+  text-decoration: none;
+  /*border: 1px solid black;*/
+  background-color: #ccc;
+  color: #4d4d4d;
+  border-radius: 3px;
+  padding: 0 10px 0 5px;
+  font-size: 12px;
+  display: block;
 }
 
 .left-box ul li a:hover {
-	box-shadow: 1px 1px 3px black;
+  box-shadow: 1px 1px 3px black;
 }
 
 /*********************RIGHT-BOX**********************/
 
 .right-box {
-	/*border: 1px solid black;*/
-	flex-basis: 90%;
-	padding: 0 5px 10px 10px;
-}	
-
-.right-box ul li {
-	line-height: 18px;
-	list-style-type: square;
-	list-style-type: none;
-	/*padding-left: 20px;*/
-	
-	/*color: blue;*/
+  /*border: 1px solid black;*/
+  flex-basis: 90%;
+  padding: 0 5px 10px 10px;
 }
 
+.right-box ul li {
+  line-height: 18px;
+  list-style-type: square;
+  list-style-type: none;
+  /*padding-left: 20px;*/
+
+  /*color: blue;*/
+}
 
 .right-box ul li::before {
-
-	content: "\2022";
-	color: black;
-	display: inline-block;
-	width: 8px;
+  content: "\2022";
+  color: black;
+  display: inline-block;
+  width: 8px;
 }
 
 #the-box-model {
-	display: inline-block;
-	background-image: url('../images/the-box-model.png');
-	background-repeat: no-repeat;
-	height: 170px;
-	width: 340px;
-	background-size: cover;
-	background-position: center center;
+  display: inline-block;
+  background-image: url("../images/the-box-model.png");
+  background-repeat: no-repeat;
+  height: 170px;
+  width: 340px;
+  background-size: cover;
+  background-position: center center;
 }
 
+.flex {
+  display: flex;
+}
 
+#flex {
+  background: rgb(243, 197, 197);
+}
+
+.container {
+  border: 1px dashed #666;
+  flex-basis: 60%;
+  display: inline-block;
+  margin-right: 5px;
+  padding: 7px;
+}
+
+.item {
+  border: 1px dashed #666;
+  flex-basis: 50%;
+  display: inline-block;
+  padding: 7px;
+}
